--- a/chatapp-js-desktop/src/styles.css
+++ b/chatapp-js-desktop/src/styles.css
@@ -20,7 +20,7 @@
 
 .container {
   margin: 0;
-  padding-top: 10vh;
+  padding-top: 8vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -79,26 +79,20 @@ button {
   outline: none;
 }
 
-#greet-input {
-  margin-right: 5px;
+.react-markdown ul {
+  list-style-type: disc;
+  padding-left: 1em;
 }
 
-/* @media (prefers-color-scheme: dark) {
-  :root {
-    color: #f6f6f6;
-    background-color: #2f2f2f;
-  }
+.react-markdown li {
+  margin-bottom: 0.5em;
+}
 
-  a:hover {
-    color: #24c8db;
-  }
+.react-markdown ol {
+  list-style-type: decimal;
+  padding-left: 2.5em;
+}
 
-  input,
-  button {
-    color: #ffffff;
-    background-color: #0f0f0f98;
-  }
-  button:active {
-    background-color: #0f0f0f69;
-  }
-} */
+.react-markdown li {
+  margin-bottom: 0.5em;
+}
