--- a/chatapp-js-desktop/src/styles.css
+++ b/chatapp-js-desktop/src/styles.css
@@ -84,15 +84,18 @@ button {
   padding-left: 1em;
 }
 
-.react-markdown li {
-  margin-bottom: 0.5em;
-}
-
 .react-markdown ol {
-  list-style-type: decimal;
-  padding-left: 2.5em;
+  list-style-type: inside;
+  padding-left: 2.5rem;
+}
+
+.react-markdown li p {
+  /* margin-top: 0.5rem; */
+  margin-bottom:  0.25rem;
 }
 
 .react-markdown li {
-  margin-bottom: 0.5em;
+  margin-top: 0;
+  padding-top: 0;
+  /* margin-bottom: 0.5em; */
 }
